[gd_scene load_steps=11 format=3 uid="uid://l1ftdtmf05j7"]

[ext_resource type="Script" path="res://scripts/station.gd" id="1_xab30"]
[ext_resource type="TileSet" uid="uid://ciiavrf4ir217" path="res://scenes/stationtileset.tres" id="2_0147l"]
[ext_resource type="PackedScene" uid="uid://d150gm8vo6yfd" path="res://character/partner.tscn" id="2_a2v2u"]
[ext_resource type="PackedScene" uid="uid://6d0dv275oe1s" path="res://character/operator.tscn" id="4_wr48y"]
[ext_resource type="FontFile" uid="uid://x256bhq1irbr" path="res://assets/fonts/Silver.ttf" id="5_l2eq2"]
[ext_resource type="PackedScene" uid="uid://cb8vl66q1g7ix" path="res://interface/spawner.tscn" id="7_8s8sf"]
[ext_resource type="PackedScene" uid="uid://chy8x88p31ouh" path="res://interface/scene_transition.tscn" id="8_5lbtw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbyca"]
size = Vector2(54, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7heu"]
size = Vector2(34, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8nobm"]
size = Vector2(32, 24)

[node name="station" type="Node2D"]
y_sort_enabled = true
position = Vector2(150, 9)
scale = Vector2(2, 2)
script = ExtResource("1_xab30")

[node name="partner" parent="." instance=ExtResource("2_a2v2u")]
y_sort_enabled = true
position = Vector2(60, 63)

[node name="TileMap" type="TileMap" parent="."]
z_as_relative = false
y_sort_enabled = true
rotation = -0.000644563
tile_set = ExtResource("2_0147l")
format = 2
layer_0/name = "Tile"
layer_0/z_index = -3
layer_0/tile_data = PackedInt32Array(327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 458753, 3, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 458753, 3, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 458753, 3, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 458753, 3, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 458753, 3, 327695, 524289, 2, 393231, 524289, 2, 458767, 524289, 2, 524303, 524289, 2, 589839, 524289, 3, 0, 393217, 1, 65536, 393217, 2, 131072, 393217, 2, 196608, 393217, 2, 262144, 393217, 2, 327680, 393217, 2, 393216, 393217, 2, 458752, 393217, 2, 524288, 393217, 2, 589824, 393217, 3, 1, 131072, 0, 65537, 131072, 1, 131073, 131072, 2, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 458753, 3, 2, 196608, 0, 65538, 196608, 1, 131074, 196608, 2, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 458753, 3, 3, 196608, 0, 65539, 196608, 1, 131075, 196608, 2, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 458753, 3, 4, 196608, 0, 65540, 196608, 1, 131076, 196608, 2, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 458753, 3, 5, 196608, 0, 65541, 196608, 1, 131077, 196608, 2, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 6, 196608, 0, 65542, 327680, 0, 131078, 327680, 1, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 7, 196608, 0, 65543, 196608, 1, 131079, 196608, 2, 196615, 0, 0, 262151, 0, 0, 8, 196608, 0, 65544, 458752, 0, 131080, 458752, 1, 196616, 0, 0, 262152, 0, 0, 9, 196608, 0, 65545, 196608, 1, 131081, 196608, 2, 196617, 0, 0, 262153, 0, 0, 10, 196608, 0, 65546, 196608, 1, 131082, 196608, 2, 196618, 0, 0, 262154, 0, 0, 11, 196608, 0, 65547, 196608, 1, 131083, 196608, 2, 196619, 0, 0, 262155, 0, 0, 12, 196608, 0, 65548, 196608, 1, 131084, 196608, 2, 196620, 0, 0, 262156, 0, 0, 13, 196608, 0, 65549, 196608, 1, 131085, 196608, 2, 196621, 0, 0, 262157, 0, 0, 14, 262144, 0, 65550, 262144, 1, 131086, 262144, 2, 196622, 0, 0, 262158, 0, 0, 15, 524289, 1, 65551, 524289, 2, 131087, 524289, 2, 196623, 524289, 2, 262159, 524289, 2, 524294, 0, 0, 589830, 524288, 1, 589831, 589824, 1, 589832, 655360, 1, 786438, 524288, 4, 851974, 0, 2, 786439, 589824, 4, 851975, 0, 2, 786440, 655360, 4, 851976, 0, 2, 851973, 0, 2, 917509, 0, 2, 917510, 0, 2, 917511, 0, 2, 917512, 0, 2, 917513, 0, 2, 851977, 0, 2, 851978, 0, 2, 917514, 0, 2, 983050, 0, 2, 1048586, 0, 2, 983049, 0, 2, 983048, 0, 2, 1048584, 0, 2, 1048583, 0, 2, 1048582, 0, 2, 983046, 0, 2, 983047, 0, 2, 1048585, 0, 2, 1048581, 0, 2, 983045, 0, 2, 1114117, 0, 2, 1114118, 0, 2, 1114119, 0, 2, 1114120, 0, 2, 1114121, 0, 2, 1114122, 0, 2, 851979, 0, 2, 917515, 0, 2, 983051, 0, 2, 1048587, 0, 2, 1114123, 0, 2, 1114124, 0, 2, 1048588, 0, 2, 983052, 0, 2, 917516, 0, 2, 851980, 0, 2, 917517, 0, 2, 983053, 0, 2, 1048589, 0, 2, 1114125, 0, 2, 786441, 65536, 1, 786442, 65536, 1, 786443, 65536, 1, 786444, 65536, 1, 720905, 65536, 0, 720906, 65536, 0, 720907, 65536, 0, 720908, 65536, 0, 720901, 65536, 0, 786437, 65536, 1, 720900, 393217, 1, 786436, 393217, 2, 851972, 393217, 2, 917508, 393217, 2, 983044, 393217, 2, 1048580, 393217, 2, 1114116, 393217, 2, 1179652, 393217, 3, 1179653, 1, 2, 1179657, 65537, 2, 1179658, 458753, 3, 1179659, 458753, 3, 1179660, 458753, 3, 1179661, 458753, 3, 1179662, 524289, 3, 917518, 720896, 2, 983054, 0, 2, 917519, 786432, 2, 983055, 0, 2, 917520, 851968, 2, 786447, 786432, 0, 786448, 851968, 0, 851981, 0, 2, 851983, 786432, 1, 851984, 851968, 1, 786449, 786432, 0, 851985, 786432, 1, 786450, 917504, 0, 1048590, 0, 2, 1048591, 0, 2, 1048592, 0, 2, 1048593, 0, 2, 1048594, 0, 2, 983058, 0, 2, 851982, 720896, 1, 786446, 720896, 0, 720909, 65536, 0, 786445, 65536, 1, 720910, 589825, 0, 1114126, 327681, 1, 1114127, 458753, 1, 1114128, 458753, 1, 1179654, 0, 2, 1179655, 0, 2, 1179656, 0, 2, 851986, 851968, 1, 917522, 851968, 2, 917521, 786432, 2, 983057, 0, 2, 983056, 0, 2, 983059, 0, 2, 983060, 0, 2, 983061, 0, 2, 983062, 0, 2, 1048598, 0, 2, 1048597, 0, 2, 1048596, 0, 2, 1048595, 0, 2, 983063, 0, 2, 983064, 0, 2, 983065, 0, 2, 983066, 0, 2, 1048602, 0, 2, 1048601, 0, 2, 1048600, 0, 2, 1048599, 0, 2, 1114134, 458753, 3, 1114135, 458753, 3, 1114136, 458753, 3, 1114137, 458753, 3, 1114138, 458753, 3, 786451, 327680, 2, 851987, 327680, 3, 917523, 327680, 4, 786452, 393216, 2, 851988, 393216, 3, 917524, 393216, 4, 786453, 458752, 5, 851989, 458752, 6, 917525, 458752, 7, 851990, 393216, 3, 917526, 393216, 4, 851991, 458752, 3, 917527, 458752, 4, 786454, 393216, 2, 786455, 458752, 2, 786456, 786432, 0, 851992, 786432, 1, 917528, 786432, 2, 786457, 851968, 0, 851993, 851968, 1, 917529, 851968, 2, 786458, 786432, 0, 851994, 786432, 1, 917530, 786432, 2, 786459, 917504, 0, 851995, 917504, 1, 917531, 917504, 2, 983067, 0, 2, 1048603, 0, 2, 1114139, 458753, 3, 1048604, 524289, 2, 1114140, 524289, 3, 983068, 524289, 2, 917532, 524289, 2, 851996, 524289, 2, 786460, 524289, 1, 1114129, 458753, 1, 1114130, 458753, 1, 1114131, 458753, 3, 1114132, 458753, 3, 1114133, 458753, 3, 589829, 458753, 3, 589833, 458753, 3, 720904, 655360, 3, 655368, 655360, 2, 655366, 524288, 2, 655367, 589824, 2, 720903, 589824, 3, 720902, 524288, 3)
layer_1/name = "Object"
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 1
layer_1/z_index = -2
layer_1/tile_data = PackedInt32Array(393229, 524288, 10, 65538, 589824, 8, 327682, 393216, 9, 393218, 393216, 10, 327683, 458752, 9, 393219, 262144, 12, 327684, 458752, 9, 393220, 458752, 10, 327685, 524288, 9, 393221, 524288, 10, 327690, 393216, 9, 393226, 393216, 10, 327691, 458752, 9, 393227, 458752, 10, 327692, 458752, 9, 393228, 262144, 12, 327693, 524288, 9, 851978, 720896, 4, 851979, 786432, 4, 851980, 851968, 4, 786442, 720896, 3, 786443, 786432, 3, 786444, 851968, 3)
layer_2/name = "Interactable"
layer_2/y_sort_origin = 2
layer_2/z_index = -1
layer_2/tile_data = PackedInt32Array(327682, 655360, 9, 327683, 655360, 10, 327684, 589824, 9, 327690, 589824, 12, 327691, 589824, 10, 327692, 589824, 11, 327693, 589824, 9, 131079, 393216, 1, 65543, 393216, 0, 65548, 0, 9, 65549, 65536, 9, 327685, 720896, 11)

[node name="text" type="Node" parent="."]

[node name="Label" type="Label" parent="text"]
offset_left = 792.0
offset_top = 407.0
offset_right = 822.0
offset_bottom = 449.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_l2eq2")
theme_override_font_sizes/font_size = 38
text = "IR1"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="text"]
offset_left = 855.0
offset_top = 406.0
offset_right = 889.0
offset_bottom = 448.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_l2eq2")
theme_override_font_sizes/font_size = 38
text = "IR2"
metadata/_edit_use_anchors_ = true

[node name="operator" parent="." instance=ExtResource("4_wr48y")]
z_index = -3
position = Vector2(183, 196)
collision_mask = 2

[node name="SceneTransition" parent="." instance=ExtResource("8_5lbtw")]
visible = false
z_index = 5
position = Vector2(-101.5, -42)

[node name="Zones" type="Node" parent="."]

[node name="map_exit" type="Area2D" parent="Zones"]
position = Vector2(392, 612)
scale = Vector2(2, 2)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zones/map_exit"]
shape = SubResource("RectangleShape2D_mbyca")

[node name="office_exit" type="Area2D" parent="Zones"]
position = Vector2(390, 81)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zones/office_exit"]
shape = SubResource("RectangleShape2D_b7heu")

[node name="ir1_exit" type="Area2D" parent="Zones"]
position = Vector2(808, 464)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zones/ir1_exit"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_8nobm")

[node name="ir2_exit" type="Area2D" parent="Zones"]
position = Vector2(872, 453)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zones/ir2_exit"]
shape = SubResource("RectangleShape2D_8nobm")

[node name="Spawner" parent="." instance=ExtResource("7_8s8sf")]
position = Vector2(142.5, 86)

[connection signal="body_entered" from="Zones/map_exit" to="." method="_on_exit"]
[connection signal="body_entered" from="Zones/office_exit" to="." method="_on_office_exit"]
[connection signal="body_entered" from="Zones/ir1_exit" to="." method="_on_ir_exit"]
[connection signal="body_entered" from="Zones/ir2_exit" to="." method="_on_ir_exit"]
